gitops/apps/minecraft/minecraft-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minecraft
  namespace: minecraft
spec:
  parentRefs:
    - name: gateway
      namespace: istio-system
      sectionName: http   # listener name on the Gateway
  hostnames:
    - "minecraft.vps.kubespaces.cloud"  # Change this to your actual domain
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: minecraft-minecraft
          port: 80
